// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ripe's identify destination action: all fields 1`] = `
Object {
  "anonymousId": "ojywl7GMKZU*opR%8",
  "context": Object {
    "testType": "ojywl7GMKZU*opR%8",
  },
  "messageId": Any<String>,
  "timestamp": Any<String>,
  "traits": Object {
    "testType": "ojywl7GMKZU*opR%8",
  },
  "userId": "ojywl7GMKZU*opR%8",
}
`;

exports[`Testing snapshot for Ripe's identify destination action: required fields 1`] = `
Object {
  "anonymousId": "anonId1234",
  "context": Object {
    "ip": "1.2.3.4",
  },
  "messageId": Any<String>,
  "timestamp": Any<String>,
  "traits": Object {},
  "userId": "user1234",
}
`;
